removed scrollbar, fixed project images to be 100% with fixed descriptoin

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h1 {
 
 p {
 	font-family: fslight;
-	font-size: 1.2em;
+	font-size: 1em;
 	color: #6d6e70;
 }
 
@@ -38,11 +38,20 @@ a:visited {
 	color: #3a74ba;
 }
 
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
 /*Project Back Arrow*/
 .navleft {
-	height: 70px;
+	height: 40px;
 	padding-left: 30px;
-	padding-top: 30px;
+	padding-top: 60px;
 	position: fixed;
 /*	top: 0;
 	bottom: 0;
@@ -61,7 +70,7 @@ a:visited {
 
 /*Holds all*/
 #maincontainer {
-	position: absolute;
+	position: fixed;
 	width: 1750px;
 	height: 955px;
 /*	background-color: black;*/
@@ -77,7 +86,7 @@ a:visited {
 	height: 480px;
 	border-top: 8px solid #3a74ba;
 	position: fixed;
-/*	margin-left: 100px;*/
+	margin-left: 50px;
 }
 
 /*Social icons black and colour*/
@@ -137,12 +146,12 @@ a:visited {
 }
 
 /*Holds right content*/
-.rightcontainer {
+/*.rightcontainer {
 	float: right;
-/*	background-color: green;*/
+	background-color: green;
 	width: 1200px;
 	height: 955px;
-}
+}*/
 
 /*Project Thumbnails*/
 .photo-grid {
@@ -178,13 +187,11 @@ a:visited {
 /*Project Titles*/
 .photo-grid figcaption p {
 /*	background-color: black;*/
-	font-size: 1.5em;
-	width: 1170px;
+	width: 1160px;
 	font-family: fsbolditalic;
-	font-size: 4.5em;
+	font-size: 4.2em;
    -webkit-text-stroke-width: 1.5px;
    -webkit-text-stroke-color: #3a74ba;
-	text-transform: uppercase;
 	color: white;
 	text-align: right;
 }
@@ -256,15 +263,16 @@ a.hovertext:hover:after, a.hovertext:focus:after {
 #imgcontainer {
 	float: right;
 /*	background-color: green;*/
-	width: 1200px;
-	height: 955px;
-	overflow: auto;
+	width: 1240px;
+	height: 1050px;
 	text-align: center;
+	margin-right: 70px;
+	padding-top: 50px;
 
 }
 
 #imgcontainer img{
-	max-width: 1185px;
+	max-width: 100%;
 	display: inline;
 	margin-left: auto;
 	margin-right: auto;
